src/lme4/LME4Parser.ts
// Generated from LME4.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LME4Listener from "./LME4Listener.js";
import LME4Visitor from "./LME4Visitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LME4Parser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly IDENTIFIER = 14;
	public static readonly NUMBER = 15;
	public static readonly WS = 16;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_formula = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_terms = 2;
	public static readonly RULE_term = 3;
	public static readonly RULE_fixedEffect = 4;
	public static readonly RULE_function = 5;
	public static readonly RULE_functionArgs = 6;
	public static readonly RULE_randomEffect = 7;
	public static readonly RULE_uncorrelatedRandomEffect = 8;
	public static readonly RULE_randomTerms = 9;
	public static readonly RULE_randomTerm = 10;
	public static readonly RULE_groupingFactor = 11;
	public static readonly RULE_interaction = 12;
	public static readonly RULE_intercept = 13;
	public static readonly RULE_offset = 14;
	public static readonly literalNames: (string | null)[] = [ null, "'~'", 
                                                            "'+'", "'('", 
                                                            "')'", "','", 
                                                            "'|'", "'||'", 
                                                            "'/'", "':'", 
                                                            "'1'", "'-1'", 
                                                            "'0'", "'offset'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "IDENTIFIER", 
                                                             "NUMBER", "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"formula", "expression", "terms", "term", "fixedEffect", "function", "functionArgs", 
		"randomEffect", "uncorrelatedRandomEffect", "randomTerms", "randomTerm", 
		"groupingFactor", "interaction", "intercept", "offset",
	];
	public get grammarFileName(): string { return "LME4.g4"; }
	public get literalNames(): (string | null)[] { return LME4Parser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LME4Parser.symbolicNames; }
	public get ruleNames(): string[] { return LME4Parser.ruleNames; }
	public get serializedATN(): number[] { return LME4Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LME4Parser._ATN, LME4Parser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public formula(): FormulaContext {
		let localctx: FormulaContext = new FormulaContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LME4Parser.RULE_formula);
		try {
			this.state = 37;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 30;
				this.expression();
				this.state = 31;
				this.match(LME4Parser.T__0);
				this.state = 32;
				this.terms();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 34;
				this.match(LME4Parser.T__0);
				this.state = 35;
				this.terms();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 36;
				this.terms();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LME4Parser.RULE_expression);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 39;
			this.match(LME4Parser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public terms(): TermsContext {
		let localctx: TermsContext = new TermsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LME4Parser.RULE_terms);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 41;
			this.term();
			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===2) {
				{
				{
				this.state = 42;
				this.match(LME4Parser.T__1);
				this.state = 43;
				this.term();
				}
				}
				this.state = 48;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let localctx: TermContext = new TermContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, LME4Parser.RULE_term);
		try {
			this.state = 55;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 49;
				this.fixedEffect();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 50;
				this.randomEffect();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 51;
				this.uncorrelatedRandomEffect();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 52;
				this.interaction();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 53;
				this.intercept();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 54;
				this.offset();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public fixedEffect(): FixedEffectContext {
		let localctx: FixedEffectContext = new FixedEffectContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, LME4Parser.RULE_fixedEffect);
		try {
			this.state = 59;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 57;
				this.match(LME4Parser.IDENTIFIER);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 58;
				this.function_();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public function_(): FunctionContext {
		let localctx: FunctionContext = new FunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, LME4Parser.RULE_function);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 61;
			this.match(LME4Parser.IDENTIFIER);
			this.state = 62;
			this.match(LME4Parser.T__2);
			this.state = 63;
			this.functionArgs();
			this.state = 64;
			this.match(LME4Parser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionArgs(): FunctionArgsContext {
		let localctx: FunctionArgsContext = new FunctionArgsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, LME4Parser.RULE_functionArgs);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 66;
			_la = this._input.LA(1);
			if(!(_la===14 || _la===15)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 71;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 67;
				this.match(LME4Parser.T__4);
				this.state = 68;
				_la = this._input.LA(1);
				if(!(_la===14 || _la===15)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
				}
				this.state = 73;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public randomEffect(): RandomEffectContext {
		let localctx: RandomEffectContext = new RandomEffectContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, LME4Parser.RULE_randomEffect);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 74;
			this.match(LME4Parser.T__2);
			this.state = 75;
			this.randomTerms();
			this.state = 76;
			this.match(LME4Parser.T__5);
			this.state = 77;
			this.groupingFactor();
			this.state = 78;
			this.match(LME4Parser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public uncorrelatedRandomEffect(): UncorrelatedRandomEffectContext {
		let localctx: UncorrelatedRandomEffectContext = new UncorrelatedRandomEffectContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, LME4Parser.RULE_uncorrelatedRandomEffect);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 80;
			this.match(LME4Parser.T__2);
			this.state = 81;
			this.randomTerms();
			this.state = 82;
			this.match(LME4Parser.T__6);
			this.state = 83;
			this.groupingFactor();
			this.state = 84;
			this.match(LME4Parser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public randomTerms(): RandomTermsContext {
		let localctx: RandomTermsContext = new RandomTermsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, LME4Parser.RULE_randomTerms);
		let _la: number;
		try {
			this.state = 95;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 10:
			case 11:
			case 12:
			case 14:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 86;
				this.randomTerm();
				this.state = 91;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===2) {
					{
					{
					this.state = 87;
					this.match(LME4Parser.T__1);
					this.state = 88;
					this.randomTerm();
					}
					}
					this.state = 93;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case 6:
			case 7:
				this.enterOuterAlt(localctx, 2);
				// tslint:disable-next-line:no-empty
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public randomTerm(): RandomTermContext {
		let localctx: RandomTermContext = new RandomTermContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, LME4Parser.RULE_randomTerm);
		try {
			this.state = 100;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 97;
				this.intercept();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 98;
				this.match(LME4Parser.IDENTIFIER);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 99;
				this.function_();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public groupingFactor(): GroupingFactorContext {
		let localctx: GroupingFactorContext = new GroupingFactorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, LME4Parser.RULE_groupingFactor);
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 102;
				this.match(LME4Parser.IDENTIFIER);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 103;
				this.match(LME4Parser.IDENTIFIER);
				this.state = 104;
				this.match(LME4Parser.T__7);
				this.state = 105;
				this.match(LME4Parser.IDENTIFIER);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 106;
				this.match(LME4Parser.IDENTIFIER);
				this.state = 107;
				this.match(LME4Parser.T__8);
				this.state = 108;
				this.match(LME4Parser.IDENTIFIER);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public interaction(): InteractionContext {
		let localctx: InteractionContext = new InteractionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, LME4Parser.RULE_interaction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 111;
			this.fixedEffect();
			this.state = 112;
			this.match(LME4Parser.T__8);
			this.state = 113;
			this.fixedEffect();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public intercept(): InterceptContext {
		let localctx: InterceptContext = new InterceptContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, LME4Parser.RULE_intercept);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 115;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 7168) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public offset(): OffsetContext {
		let localctx: OffsetContext = new OffsetContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, LME4Parser.RULE_offset);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 117;
			this.match(LME4Parser.T__12);
			this.state = 118;
			this.match(LME4Parser.T__2);
			this.state = 119;
			this.match(LME4Parser.IDENTIFIER);
			this.state = 120;
			this.match(LME4Parser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!LME4Parser.__ATN) {
			LME4Parser.__ATN = new ATNDeserializer().deserialize(LME4Parser._serializedATN);
		}

		return LME4Parser.__ATN;
	}


	static DecisionsToDFA = LME4Parser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class FormulaContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public expression(): ExpressionContext {
		return this.getTypedRuleContext(ExpressionContext, 0) as ExpressionContext;
	}
	public terms(): TermsContext {
		return this.getTypedRuleContext(TermsContext, 0) as TermsContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_formula;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterFormula) {
	 		listener.enterFormula(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitFormula) {
	 		listener.exitFormula(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitFormula) {
			return visitor.visitFormula(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ExpressionContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(LME4Parser.IDENTIFIER, 0);
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_expression;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterExpression) {
	 		listener.enterExpression(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitExpression) {
	 		listener.exitExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitExpression) {
			return visitor.visitExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TermsContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public term_list(): TermContext[] {
		return this.getTypedRuleContexts(TermContext) as TermContext[];
	}
	public term(i: number): TermContext {
		return this.getTypedRuleContext(TermContext, i) as TermContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_terms;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterTerms) {
	 		listener.enterTerms(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitTerms) {
	 		listener.exitTerms(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitTerms) {
			return visitor.visitTerms(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TermContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public fixedEffect(): FixedEffectContext {
		return this.getTypedRuleContext(FixedEffectContext, 0) as FixedEffectContext;
	}
	public randomEffect(): RandomEffectContext {
		return this.getTypedRuleContext(RandomEffectContext, 0) as RandomEffectContext;
	}
	public uncorrelatedRandomEffect(): UncorrelatedRandomEffectContext {
		return this.getTypedRuleContext(UncorrelatedRandomEffectContext, 0) as UncorrelatedRandomEffectContext;
	}
	public interaction(): InteractionContext {
		return this.getTypedRuleContext(InteractionContext, 0) as InteractionContext;
	}
	public intercept(): InterceptContext {
		return this.getTypedRuleContext(InterceptContext, 0) as InterceptContext;
	}
	public offset(): OffsetContext {
		return this.getTypedRuleContext(OffsetContext, 0) as OffsetContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_term;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterTerm) {
	 		listener.enterTerm(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitTerm) {
	 		listener.exitTerm(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitTerm) {
			return visitor.visitTerm(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FixedEffectContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(LME4Parser.IDENTIFIER, 0);
	}
	public function_(): FunctionContext {
		return this.getTypedRuleContext(FunctionContext, 0) as FunctionContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_fixedEffect;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterFixedEffect) {
	 		listener.enterFixedEffect(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitFixedEffect) {
	 		listener.exitFixedEffect(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitFixedEffect) {
			return visitor.visitFixedEffect(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(LME4Parser.IDENTIFIER, 0);
	}
	public functionArgs(): FunctionArgsContext {
		return this.getTypedRuleContext(FunctionArgsContext, 0) as FunctionArgsContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_function;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterFunction) {
	 		listener.enterFunction(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitFunction) {
	 		listener.exitFunction(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitFunction) {
			return visitor.visitFunction(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionArgsContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER_list(): TerminalNode[] {
	    	return this.getTokens(LME4Parser.IDENTIFIER);
	}
	public IDENTIFIER(i: number): TerminalNode {
		return this.getToken(LME4Parser.IDENTIFIER, i);
	}
	public NUMBER_list(): TerminalNode[] {
	    	return this.getTokens(LME4Parser.NUMBER);
	}
	public NUMBER(i: number): TerminalNode {
		return this.getToken(LME4Parser.NUMBER, i);
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_functionArgs;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterFunctionArgs) {
	 		listener.enterFunctionArgs(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitFunctionArgs) {
	 		listener.exitFunctionArgs(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitFunctionArgs) {
			return visitor.visitFunctionArgs(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class RandomEffectContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public randomTerms(): RandomTermsContext {
		return this.getTypedRuleContext(RandomTermsContext, 0) as RandomTermsContext;
	}
	public groupingFactor(): GroupingFactorContext {
		return this.getTypedRuleContext(GroupingFactorContext, 0) as GroupingFactorContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_randomEffect;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterRandomEffect) {
	 		listener.enterRandomEffect(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitRandomEffect) {
	 		listener.exitRandomEffect(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitRandomEffect) {
			return visitor.visitRandomEffect(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class UncorrelatedRandomEffectContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public randomTerms(): RandomTermsContext {
		return this.getTypedRuleContext(RandomTermsContext, 0) as RandomTermsContext;
	}
	public groupingFactor(): GroupingFactorContext {
		return this.getTypedRuleContext(GroupingFactorContext, 0) as GroupingFactorContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_uncorrelatedRandomEffect;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterUncorrelatedRandomEffect) {
	 		listener.enterUncorrelatedRandomEffect(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitUncorrelatedRandomEffect) {
	 		listener.exitUncorrelatedRandomEffect(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitUncorrelatedRandomEffect) {
			return visitor.visitUncorrelatedRandomEffect(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class RandomTermsContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public randomTerm_list(): RandomTermContext[] {
		return this.getTypedRuleContexts(RandomTermContext) as RandomTermContext[];
	}
	public randomTerm(i: number): RandomTermContext {
		return this.getTypedRuleContext(RandomTermContext, i) as RandomTermContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_randomTerms;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterRandomTerms) {
	 		listener.enterRandomTerms(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitRandomTerms) {
	 		listener.exitRandomTerms(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitRandomTerms) {
			return visitor.visitRandomTerms(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class RandomTermContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public intercept(): InterceptContext {
		return this.getTypedRuleContext(InterceptContext, 0) as InterceptContext;
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(LME4Parser.IDENTIFIER, 0);
	}
	public function_(): FunctionContext {
		return this.getTypedRuleContext(FunctionContext, 0) as FunctionContext;
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_randomTerm;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterRandomTerm) {
	 		listener.enterRandomTerm(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitRandomTerm) {
	 		listener.exitRandomTerm(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitRandomTerm) {
			return visitor.visitRandomTerm(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class GroupingFactorContext extends ParserRuleContext {
	constructor(parser?: LME4Parser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public IDENTIFIER_list(): TerminalNode[] {
	    	return this.getTokens(LME4Parser.IDENTIFIER);
	}
	public IDENTIFIER(i: number): TerminalNode {
		return this.getToken(LME4Parser.IDENTIFIER, i);
	}
    public get ruleIndex(): number {
    	return LME4Parser.RULE_groupingFactor;
	}
	public enterRule(listener: LME4Listener): void {
	    if(listener.enterGroupingFactor) {
	 		listener.enterGroupingFactor(this);
		}
	}
	public exitRule(listener: LME4Listener): void {
	    if(listener.exitGroupingFactor) {
	 		listener.exitGroupingFactor(this);
		}
	}
	// @Override
	public accept<Result>(visitor: LME4Visitor<Result>): Result {
		if (visitor.visitGroupingFactor) {
			return visitor.visitGroupingFactor(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

